[package]
name = "watt"
version = "0.3.0"
authors = ["David Tolnay <dtolnay@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Runtime for executing Rust procedural macros compiled as WebAssembly."
repository = "https://github.com/dtolnay/watt"
documentation = "https://docs.rs/watt"
categories = ["development-tools::procedural-macro-helpers"]
readme = "README.md"
edition = "2018"
include = [
    "LICENSE_APACHE",
    "LICENSE_MIT",
    "jit/src/*",
    "runtime/LICENSE_ISC",
    "runtime/src/*",
    "src/*",
]

[workspace]
members = ["demo/caller", "demo/wa", "runtime/tests", "proc-macro"]

[patch.crates-io]
watt = { path = "." }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
