[package]
name = "watt"
version = "0.4.3"
authors = ["David Tolnay <dtolnay@gmail.com>"]
categories = ["development-tools::procedural-macro-helpers", "wasm"]
description = "Runtime for executing Rust procedural macros compiled as WebAssembly."
documentation = "https://docs.rs/watt"
edition = "2021"
include = [
    "LICENSE_APACHE",
    "LICENSE_MIT",
    "jit/src/*",
    "runtime/LICENSE_ISC",
    "runtime/src/*",
    "src/*",
]
keywords = ["macros", "wasm"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/watt"

[workspace]
members = ["demo/caller", "demo/wa", "proc-macro", "runtime/tests"]

[lib]
doc-scrape-examples = false

[patch.crates-io]
watt = { path = "." }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]
