[package]
name = "watt-demo"
version = "0.0.0"
authors = ["David Tolnay <dtolnay@gmail.com>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"

[workspace]

[patch.crates-io]
proc-macro2 = { path = "../../proc-macro" }
