[package]
name = "watt-demo"
version = "0.0.0"
authors = ["David Tolnay <dtolnay@gmail.com>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
watt-proc-server = { path = "../../watt-proc-server" }

[workspace]

[patch.crates-io]
proc-macro2 = { git = "https://github.com/Freax13/proc-macro2", branch = "readd-wasm" }
syn = { git = "https://github.com/Freax13/syn", branch = "readd-proc-macro-wasm" }
